# super-mario-bros

./: .clang-format  CMakeLists.txt  LICENSE  README.md
assets/: Sprite-0001.ase  theme-song.json
core/: CMakeLists.txt  README.md
core/include/smbc-core/: assets.hpp  level.hpp
core/src/: assets.cpp  level.cpp
editor/: CMakeLists.txt
editor/src/: main.cpp
game/: CMakeLists.txt
game/include/smbc/: color.h
game/src/: color.c  game.c  ground.c  ground.h  main.cpp  player.c  player.h
include/: consts.h  ground.h
src/: consts.c  consts.h  game.c  game.h  ground.c  ground.h  main.c  player.c  player.h
